--- a/index.html
+++ b/index.html
@@ -8,20 +8,26 @@
 </head>
 <body>
     <header>
-        <div>
-            <h1>Header Logo</h1>
+        <div class="header-link">
+            <h2>Header Logo</h2>
+            <div class="header-links">
             <a href="#">header link one</a>
             <a href="#">header link two</a>
             <a href="#">header link three</a>
+            </div>
         </div>
     </header>
 
     <div class="header-content">
-        <h2>This website is awesome</h2>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <div class="content-left">
+        <h1>This website is<br> awesome</h1>
+        <p>This website has some subtext that goes here under the <br>main title. It's a smaller font and the color is lower<br> contrast</p>
         <button>Sign up</button>
-        <div>This is a placeholder for an image</div>  
-    </div>
+        </div>
+        <div class="content-right">
+        <div class="box">This is a placeholder for an image</div>  
+        </div>
+        </div>
    
 </body>
 </html>
